[package]
name = "aoc"
version = "0.1.0"
authors = ["Dong Yeop Lee <dongy7@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[lib]
name = "aoc"
path = "src/lib.rs"

[[bin]]
name = "main"
path = "src/main.rs"